--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "debaduttadey/debaduttadey"
+  github           : "debaduttadey"
   gitlab           :
   google_plus      :
   keybase          :
