--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links
 main:
-  - title: "About"
+  - title: "About1"
     url: /about/
   - title: "Machine Learning"
     url: /machine-learning/
